--- a/1.md
+++ b/1.md
@@ -7,6 +7,6 @@ o implementar directamente su modelo de desarrollo.
 
 *Decide que debe de hacer Richard:
   * http://github.com - automatic!
-    [GitHub](http://github.com]
+    [GitHub](http://github.com)
   * Hola
 
