--- a/1.md
+++ b/1.md
@@ -5,8 +5,7 @@ en software libre (en teoria, una magnifica idea), pero, se dió cuenta de que t
 empezar por algun lado. Richard dudaba si entre crear un marco de referencia para su idea
 o implementar directamente su modelo de desarrollo.
 
-*Decide que debe de hacer Richard:
-  * http://github.com - automatic!
-    [GitHub](http://github.com)
+Decide que debe de hacer Richard:
+  * [GitHublkjlj](http://github.com)
   * Hola
 
