--- a/1.md
+++ b/1.md
@@ -6,6 +6,5 @@ empezar por algun lado. Richard dudaba si entre crear un marco de referencia par
 o implementar directamente su modelo de desarrollo.
 
 Decide que debe de hacer Richard:
-  * [GitHublkjlj](http://github.com)
-  * Hola
-
+  * [Crear el marco de referencia.](https://github.com/perezrecjorge/Richard-Stallman-y-la-historia-jam-s-contada./blob/master/1.1.md)
+  * [Implementar directamente el Sotfware Libre.](https://github.com/perezrecjorge/Richard-Stallman-y-la-historia-jam-s-contada./blob/master/1.2.md)
