--- a/1.1.md
+++ b/1.1.md
@@ -1,1 +1,3 @@
-## HOLA 1 ##
+## Richard y su evolución. ##
+Richard consiguió crear el marco de referencia, que se basaba un modelo de desarrollo y distribución alternativo al software privativo.
+Tras ello, en su palmares incluyó la realización del editor de texto GNU Emacs, el compilador GCC, el depurador GDB, y el lenguaje de construcción GNU Make; todos bajo la rúbrica del Proyecto GNU.
