--- a/1.1.md
+++ b/1.1.md
@@ -1,3 +1,8 @@
 ## Richard y su evolución. ##
 Richard consiguió crear el marco de referencia, que se basaba un modelo de desarrollo y distribución alternativo al software privativo.
 Tras ello, en su palmares incluyó la realización del editor de texto GNU Emacs, el compilador GCC, el depurador GDB, y el lenguaje de construcción GNU Make; todos bajo la rúbrica del Proyecto GNU.
+
+En algun momento de cualquier dia, le vino a la cabeza una idea, pero dudaba si desarrollarla, ¿Que crees que deberia de hacer Richard?.
+
+  * [Desarrollar la idea.](https://github.com/perezrecjorge/Richard-Stallman-y-la-historia-jam-s-contada./blob/master/1.1.md)
+  * [Seguir jugando a la PS4.](https://github.com/perezrecjorge/Richard-Stallman-y-la-historia-jam-s-contada./blob/master/1.2.md)
