--- a/2.1.md
+++ b/2.1.md
@@ -1,1 +1,4 @@
-## HOLA 2 ##
+## LA GRAN IDEA ##
+Richard se puso manos a la obra, y tras infinitas horas detras de la pantalla, finalmente llego a ser el inventor del concepto de "copyleft" (aunque no del término): un método para licenciar obras contempladas por el derecho de autor, de tal forma que su uso y modificación (así como de sus derivados) permanezcan siempre permitidos.
+
+Tras esto, Richard se tomó unas merecidas vacaciones y nunca mas se supo de él.
