--- a/2.2.md
+++ b/2.2.md
@@ -1,1 +1,4 @@
-## HOLA 5 ##
+## EL DILEMA DE LOS JUEGOS ONLINE ##
+Como Richard no podía pausar una partida que estaba jugando online, decidió dejar para despues la idea del proyecto; lo dejo tanto que finalmente se le acabo olvidando, a raiz de esto, Richard entró en una gran depresion ya que él sabía que era la gran oportunidad de su vida.
+
+Richard se fué a comprar tabaco y nunca volvió.
