--- a/1.2.md
+++ b/1.2.md
@@ -1,4 +1,4 @@
 ## Una mala decisión. ##
-Richard comenzó a trabajar en implementar directamente el Software Libre, tras muchas horas de trabajo, decidió sacarlo a la luz pero primero quería contar su trabajo en un foro, una mala decisión. Su historia, le llamó la atención a un hacker, que facilmente le borró todo el trabajo. Richard lloró durante semanas.
+Richard comenzó a trabajar en implementar directamente el Software Libre, tras muchas horas de trabajo, decidió sacarlo a la luz pero primero quería contar su experiencia en un foro, una mala decisión. Su historia, le llamó la atención a un hacker, que facilmente le borró todo el trabajo. Richard lloró durante semanas.
 
 Finalmente, Richard se dedicó a instalars Windows pirata a amigos y familiares toda su vida.
